--- a/css/geren.css
+++ b/css/geren.css
@@ -122,7 +122,7 @@ h2,h3
 
 #section-menu #cebianlan
 {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	background: rgba(255,255,255,0.3);
 	width: 200px;
 }
