--- a/css/geren.css
+++ b/css/geren.css
@@ -16,7 +16,8 @@ ul
 #section-menu
 {
 	width: 100%;
-	background: #1a121bcc;;
+	-webkit-background: #32a796;
+	-moz-background: #1a121bcc;
 	
 }
 p
@@ -122,7 +123,7 @@ h2,h3
 
 #section-menu #cebianlan
 {
-	
+	/*border: 1px solid red;*/
 	background: rgba(255,255,255,0.3);
 	width: 200px;
 }
@@ -177,6 +178,20 @@ h2,h3
 	100%{opacity: 1}
 
 }
+@-webkit-keyframes jianbian
+{
+	0%{opacity: 0}
+	20%{opacity: 0.2}
+	30%{opacity: 0.3}
+	40%{opacity: 0.4}
+	50%{opacity: 0.5}
+	60%{opacity: 0.6}
+	70%{opacity: 0.7}
+	80%{opacity: 0.8}
+	90%{opacity: 0.9}
+	100%{opacity: 1}
+}
+
 .title
 {
 	line-height: 70px;    
@@ -189,6 +204,11 @@ h2,h3
     -moz-animation-delay:0.5s;
     opacity: 0;
     -moz-animation-fill-mode:forwards;
+    -webkit-animation-name:jianbian;
+    -webkit-animation-duration:5s;
+    -webkit-animation-timing-function:linear;
+    -webkit-animation-delay:0.5s;
+    -webkit-animation-fill-mode:forwards;
 }
 .line-top
 {
@@ -219,7 +239,11 @@ h2,h3
     -moz-animation-timing-function:linear;
     -moz-animation-delay:2s;
     opacity: 0;
-    animation-fill-mode:forwards;
+    -webkit-animation-fill-mode:forwards;
+    -webkit-animation-name:jianbian;
+    -webkit-animation-duration:5s;
+    -webkit-animation-timing-function:linear;
+    -webkit-animation-delay:2s;
 }
 .container .banner-content .titletext:hover
 {
