--- a/css/geren.css
+++ b/css/geren.css
@@ -16,8 +16,8 @@ ul
 #section-menu
 {
 	width: 100%;
-	-webkit-background: #32a796;
-	-moz-background: #1a121bcc;
+	background: #32a796;
+	
 	
 }
 p
